# data-eater

./: Cargo.toml  Makefile.toml  README.md
crates/core/: Cargo.toml
crates/data-eater-core/: Cargo.toml
crates/data-eater-core/benches/: snowflakes.rs
crates/data-eater-core/src/: document.rs  hashing.rs  lib.rs  snowflake.rs
crates/data-eater-services/: Cargo.toml
